# KISS

./: .gitignore  CMakeLists.txt  Readme.md  Readme.txt
Test/: main.cxx
Test/math/: basic.cxx
Test/types/: KISS_traits.c++  alignment.c++  arrays.c++  basic_types.c++  boolean_traits.c++  compiler_traits.cxx  composite_type_categories.c++  const_volatile_identification.c++  const_volatile_transformations.c++  construction_destruction_assignment_copy_move_properties.c++  cv_traits.cxx  inheritance_properties.c++  memory_properties.c++  misc_traits.cxx  miscellaneous.c++  numerical_traits.cxx  primary_type_categories.c++  reference_pointer_transformations.c++  signedness.c++  transforming_traits.c++  value_traits.c++
include/: algorithm.h++  algorithm.hxx  aligned_storage.h++  aligned_union.h++  allocator.h++  array++  array.h++  assert.h++  atomic.h++  compressed_pair.h++  config.h++  config.hxx  error.h++  error.hxx  exceptions.h++  function.h++  function.hxx  hash.h++  limits.h++  limits.hxx  math.h++  math.hxx  meta_utility.h++  owning_ptr.h++  pair.h++  pointer_traits.h++  ref.h++  reference_wrapper.h++  string.h++  system.h++  system.hxx  tmp.h++  tmp.hxx  tuple.h++  type_traits.h++  types.h++  types.hxx  unique_ptr.h++  utility.h++  utility.hxx  (+1 more)
include/old/: assert.h++  meta.h++  ref.h++  tuple.h++
src/: algorithm.c++  algorithm.cxx  math.c++  math.cxx
test/: LICENSE.txt  test.h++
test/math/: basic.cxx
test/pair/: pair.c++
test/smart_pointers/: unique_ptr.c++
test/tuple/: tuple.c++
test/types/: alignment.c++  arrays.c++  basic.c++  composite_categories.c++  const_volatile.c++  construction_destruction_assignment_copy_move.c++  inheritance.c++  integral_constant.c++  memory.c++  memory_properties.c++  miscellaneous.c++  pointers.c++  primary_categories.c++  references.c++  signedness.c++  utility.c++
test/utility/: aligned_union.c++  compressed_pair.c++  tuple.c++
